Improve the formatting of the CV

--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -14,9 +14,16 @@ Printer friendly version
 
     \vspace{10pt}
 
-    You can reach me via \href{mailto:eero.haihala@gmail.com}{email} and read
-    more on \href{https://www.linkedin.com/in/eero-haihala/}{linkedin} and
-    \href{https://haihala.github.io/portfolio}{my portfolio} 
+    I've gone to school for programming and professionally worked as a programmer.
+    You can read more about that on
+    \href{https://www.linkedin.com/in/eero-haihala/}{linkedin}. I'd like to
+    work in games. See \href{https://haihala.github.io/portfolio}{my portfolio}
+    for some highlights of what I've done so far.
+
+    \vspace{10pt}
+
+    You can reach me via email at
+    \href{mailto:eero.haihala@gmail.com}{eero.haihala@gmail.com}
 }
 
 \section*{Skills}
@@ -30,9 +37,9 @@ Reading guide:
 \end{etaremune}
 
 \begin{skills}
-    \skillitem{3}{Rust, TypeScript/JavaScript, Python, Git, Bevy, React, Web development, Google cloud platform, Linux, Docker}
-    \skillitem{2}{Godot, Unity, Blender, Scrum, Agile, Teaching, Project management, C\#, SQL, Kotlin, Java, Svelte, SvelteKit, NextJS, HTMX, B2B Customer communication, Lua, Microsoft Azure, Terraform, Django, FastAPI, Node, Bun}
-    \skillitem{1}{Unreal engine, Go, Zig, C++, C, Haskell, PHP, MongoDB, \LaTeX}
+    \skillitem{3}{Rust, TypeScript/JavaScript, Python, Git, Bevy, Google cloud platform (no longer certified professional cloud architect) , React, Web development,, Linux, Docker, Lua, Svelte, HTMX}
+    \skillitem{2}{Godot, Unity, Blender, Scrum, Agile, Teaching, Project management, C\#, SQL, Kotlin, Java, NextJS, B2B Customer communication,  Microsoft Azure, Terraform, Django, FastAPI, Node}
+    \skillitem{1}{Unreal engine, Go, Zig, C++, C, Haskell, PHP, MongoDB, \LaTeX, Groovy, Bun, Deno}
 \end{skills}
 
 I've left out a lot of skills to get it all on one page. I've hit the 50 skill limit on linkedin.
@@ -42,10 +49,10 @@ I've left out a lot of skills to get it all on one page. I've hit the 50 skill l
 \begin{Timeline}
 	\timelineitem{2021-2025 (Four years)}{Lead software developer}{Vincit}
 	\timelineitem{2022-2024 (Three years)}{Head computer science teacher}{Päivölä School of Mathematics}
-	\timelineitem{2018-2022 (Five years)}{Occasional lecturer}{Päivölä School of Mathematics}
+	\timelineitem{2018-2022 (Five years)}{Occasional computer science lecturer}{Päivölä School of Mathematics}
 	\timelineitem{2019-2020 (Two years)}{Systems specialist}{Ambientia}
 	% \timelineitem{2017 (Three months)}{Software developer}{Intopalo, part of Insta group nowadays}
-	\timelineitem{2014-2016}{Trainee}{Nokia and Päivölä student innovation labs}
+	\timelineitem{2014-2016 (Two years)}{Trainee}{Nokia and Päivölä student innovation labs}
 \end{Timeline}
 
 \section*{Education}
@@ -53,7 +60,7 @@ I've left out a lot of skills to get it all on one page. I've hit the 50 skill l
 \begin{Timeline}
 	\timelineitem{2022-2024 (Two years)}{Master of Science (Technology)}{Tampere University}
 	\timelineitem{2016-2021 (Five years)}{Bachelor of Science (Technology)}{Tampere University}
-	\timelineitem{2014-2016 (Two years)}{Undergraduate}{Päivölä School of Mathematics}
+	\timelineitem{2014-2016 (Two years)}{High school graduate}{Päivölä School of Mathematics}
 \end{Timeline}
 
 \end{document}
