--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -9,7 +9,7 @@ Printer friendly version
 
     Insert a borderline narcissistic gloating blurb of text that has been ran
     through a thesaurus seven times to sound smart. Ideally it should assure
-    the reader of my abilities in various circumstances with the obvious caveat
+    the reader of my abilities in various circumstances with the slight caveat
     of proving nothing. 
 
     \vspace{10pt}
@@ -25,6 +25,7 @@ Printer friendly version
     You can reach me via email at
     \href{mailto:eero.haihala@gmail.com}{eero.haihala@gmail.com}
 }
+
 
 \section*{Skills}
 
@@ -47,20 +48,20 @@ I've left out a lot of skills to get it all on one page. I've hit the 50 skill l
 \section*{Work experience}
 
 \begin{Timeline}
-	\timelineitem{2021-2025 (Four years)}{Lead software developer}{Vincit}
-	\timelineitem{2022-2024 (Three years)}{Head computer science teacher}{Päivölä School of Mathematics}
-	\timelineitem{2018-2022 (Five years)}{Occasional computer science lecturer}{Päivölä School of Mathematics}
-	\timelineitem{2019-2020 (Two years)}{Systems specialist}{Ambientia}
-	% \timelineitem{2017 (Three months)}{Software developer}{Intopalo, part of Insta group nowadays}
-	\timelineitem{2014-2016 (Two years)}{Trainee}{Nokia and Päivölä student innovation labs}
+	\timelineitem{Ongoing since 2021}{Lead software developer}{Vincit}
+	\timelineitem{Three years (2022-2024)}{Head computer science teacher}{Päivölä School of Mathematics}
+	\timelineitem{Five years (2018-2022)}{Occasional computer science lecturer}{Päivölä School of Mathematics}
+	\timelineitem{Two years (2019-2020)}{Systems specialist}{Ambientia}
+	% \timelineitem{Three months (2017)}{Software developer}{Intopalo, part of Insta group nowadays}
+	\timelineitem{Two years (2014-2016)}{Trainee}{Nokia and Päivölä student innovation labs}
 \end{Timeline}
 
 \section*{Education}
 
 \begin{Timeline}
-	\timelineitem{2022-2024 (Two years)}{Master of Science (Technology)}{Tampere University}
-	\timelineitem{2016-2021 (Five years)}{Bachelor of Science (Technology)}{Tampere University}
-	\timelineitem{2014-2016 (Two years)}{High school graduate}{Päivölä School of Mathematics}
+	\timelineitem{Two years (2022-2024)}{Master of Science (Technology)}{Tampere University}
+	\timelineitem{Five years (2016-2021)}{Bachelor of Science (Technology)}{Tampere University}
+	\timelineitem{Two years (2014-2016)}{High school graduate}{Päivölä School of Mathematics}
 \end{Timeline}
 
 \end{document}
