Remove extra space and comma in CV

--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -38,7 +38,7 @@ Reading guide:
 \end{etaremune}
 
 \begin{skills}
-    \skillitem{3}{Rust, TypeScript/JavaScript, Python, Git, Bevy, Google cloud platform (no longer certified professional cloud architect) , React, Web development,, Linux, Docker, Lua, Svelte, HTMX}
+    \skillitem{3}{Rust, TypeScript/JavaScript, Python, Git, Bevy, Google cloud platform (no longer certified professional cloud architect), React, Web development, Linux, Docker, Lua, Svelte, HTMX}
     \skillitem{2}{Godot, Unity, Blender, Scrum, Agile, Teaching, Project management, C\#, SQL, Kotlin, Java, NextJS, B2B Customer communication,  Microsoft Azure, Terraform, Django, FastAPI, Node}
     \skillitem{1}{Unreal engine, Go, Zig, C++, C, Haskell, PHP, MongoDB, \LaTeX, Groovy, Bun, Deno}
 \end{skills}
