--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -5,8 +5,7 @@
 \section*{CV - Eero Häihälä}
 Printer friendly version
 
-\cvtop{face-bw}{
-
+\cvheader{face-bw}{
     Insert a borderline narcissistic gloating blurb of text that has been ran
     through a thesaurus seven times to sound smart. Ideally it should assure
     the reader of my abilities in various circumstances with the slight caveat
@@ -29,7 +28,13 @@ Printer friendly version
 
 \section*{Skills}
 
-Reading guide:
+\begin{skills}
+    \skillitem{3}{Rust, TypeScript/JavaScript, Python, Git, Bevy, Google cloud platform (no longer certified professional cloud architect), React, Web development, Linux, Docker, Lua, Svelte, HTMX}
+    \skillitem{2}{Godot, Unity, Blender, Scrum, Agile, Teaching, Project management, C\#, SQL, Kotlin, Java, NextJS, B2B Customer communication,  Microsoft Azure, Terraform, Django, FastAPI, Node}
+    \skillitem{1}{Unreal engine, Go, Zig, C++, C, Haskell, PHP, MongoDB, \LaTeX, Groovy, Bun, Deno}
+\end{skills}
+
+What I mean by each level:
 
 \begin{etaremune}
     \item I'm as confident in this as I can be. I've worked with these for 5+ years and understand them deeply.
@@ -37,13 +42,8 @@ Reading guide:
     \item A week of (re-)learning away from a higher grade. I have previous experience with these.
 \end{etaremune}
 
-\begin{skills}
-    \skillitem{3}{Rust, TypeScript/JavaScript, Python, Git, Bevy, Google cloud platform (no longer certified professional cloud architect), React, Web development, Linux, Docker, Lua, Svelte, HTMX}
-    \skillitem{2}{Godot, Unity, Blender, Scrum, Agile, Teaching, Project management, C\#, SQL, Kotlin, Java, NextJS, B2B Customer communication,  Microsoft Azure, Terraform, Django, FastAPI, Node}
-    \skillitem{1}{Unreal engine, Go, Zig, C++, C, Haskell, PHP, MongoDB, \LaTeX, Groovy, Bun, Deno}
-\end{skills}
-
-I've left out a lot of skills to get it all on one page. I've hit the 50 skill limit on linkedin.
+There are a lot skills I dabble in that didn't make the cut. I've hit the 50 skill limit on 
+\href{https://www.linkedin.com/in/eero-haihala/}{linkedin}.
 
 \section*{Work experience}
 
