--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -29,17 +29,17 @@ Printer friendly version
 \section*{Skills}
 
 \begin{skills}
-    \skillitem{3}{Rust, TypeScript/JavaScript, Python, Git, Bevy, Google cloud platform (no longer certified professional cloud architect), React, Web development, Linux, Docker, Lua, Svelte, HTMX}
-    \skillitem{2}{Godot, Unity, Blender, Scrum, Agile, Teaching, Project management, C\#, SQL, Kotlin, Java, NextJS, B2B Customer communication,  Microsoft Azure, Terraform, Django, FastAPI, Node}
-    \skillitem{1}{Unreal engine, Go, Zig, C++, C, Haskell, PHP, MongoDB, \LaTeX, Groovy, Bun, Deno}
+    \skillitem{3}{Rust, TS/JS, Python, Git, Bevy, Google cloud platform (ex-certified professional cloud architect), React, Web development, Linux, Docker, Shell scripts}
+    \skillitem{2}{Godot, Unity, Blender, Scrum, Agile, Teaching, Project management, C\#, SQL, Java, B2B Customer communication, Microsoft Azure, Terraform, Django, FastAPI, NodeJS, Lua, Svelte}
+    \skillitem{1}{Unreal engine, Go, Zig, C++, C, Haskell, PHP, MongoDB, \LaTeX, NextJS, Kotlin, Bun, Deno, Angular, AWS, HTMX}
 \end{skills}
 
 What I mean by each level:
 
 \begin{etaremune}
-    \item I'm as confident in this as I can be. I've worked with these for 5+ years and understand them deeply.
-    \item What I think of as basic competence, but others keep telling me is a high bar. For most of these I have years.
-    \item A week of (re-)learning away from a higher grade. I have previous experience with these.
+    \item I'm as confident in these as I can be. Average experience: 4 years.
+    \item What I think of as basic competence, but others keep telling me is a high bar. Average experience: A year.
+    \item A week of (re-)learning away from level 2. Average experience: 3 months.
 \end{etaremune}
 
 There are a lot skills I dabble in that didn't make the cut. I've hit the 50 skill limit on 
