Reword CV, reorganize skill lists

--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -25,25 +25,27 @@ Printer friendly version
     \href{mailto:eero.haihala@gmail.com}{eero.haihala@gmail.com}
 }
 
-
 \section*{Skills}
 
 \begin{skills}
-    \skillitem{3}{Rust, TS/JS, Python, Git, Bevy, Google cloud platform (ex-certified professional cloud architect), React, Web development, Linux, Docker, Shell scripts}
-    \skillitem{2}{Godot, Unity, Blender, Scrum, Agile, Teaching, Project management, C\#, SQL, Java, B2B Customer communication, Microsoft Azure, Terraform, Django, FastAPI, NodeJS, Lua, Svelte}
-    \skillitem{1}{Unreal engine, Go, Zig, C++, C, Haskell, PHP, MongoDB, \LaTeX, NextJS, Kotlin, Bun, Deno, Angular, AWS, HTMX}
+    \skillitem{3}{Rust, TS/JS, Python, Bevy, Google cloud platform (ex-certified professional cloud architect), React, Web development, Docker, CI/CD, Shell scripts, Linux, Git}
+    \skillitem{2}{Godot, Unity, Blender, C\#, Lua, Microsoft Azure, Terraform, Scrum, Agile, Teaching, Project management, B2B Customer communication, Java, SQL, Django, FastAPI, NodeJS, Svelte}
+    \skillitem{1}{Unreal engine, C++, C, Android, AWS, Kotlin, Go, Zig, Haskell, PHP, MongoDB, \LaTeX, NextJS, Bun, Deno, Angular, HTMX}
 \end{skills}
 
 What I mean by each level:
 
 \begin{etaremune}
-    \item I'm as confident in these as I can be. Average experience: 4 years.
-    \item What I think of as basic competence, but others keep telling me is a high bar. Average experience: A year.
+    \item I'm as confident in these as I can be. Experience: 3-10 (average 5) years.
+    \item What I think of as basic competence, but others keep telling me is a high bar. Experience: 1-8 (average 2) years.
     \item A week of (re-)learning away from level 2. Average experience: 3 months.
 \end{etaremune}
 
-There are a lot skills I dabble in that didn't make the cut. I've hit the 50 skill limit on 
-\href{https://www.linkedin.com/in/eero-haihala/}{linkedin}.
+There are a lot things I dabble in that didn't make the cut. I've hit the 50
+skill limit on \href{https://www.linkedin.com/in/eero-haihala/}{linkedin} on
+technical skills alone, and then had to cut some of them out to try to better
+match the skill lists recruiters look for. This has the unfortunate side effect
+of forgetting I know something if I don't actively use it.
 
 \section*{Work experience}
 
