Upgrade skill lists in CV
TODO: Go through the texts, see about adding page 2 with more details.

--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -9,7 +9,7 @@ Printer friendly version
     Insert a borderline narcissistic gloating blurb of text that has been ran
     through a thesaurus seven times to sound smart. Ideally it should assure
     the reader of my abilities in various circumstances with the slight caveat
-    of proving nothing. 
+    of proving nothing.
 
     \vspace{10pt}
 
@@ -28,17 +28,68 @@ Printer friendly version
 \section*{Skills}
 
 \begin{skills}
-    \skillitem{3}{Rust, TS/JS, Python, Bevy, Google cloud platform (ex-certified professional cloud architect), React, Web development, Docker, CI/CD, Shell scripts, Linux, Git}
-    \skillitem{2}{Godot, Unity, Blender, C\#, Lua, Microsoft Azure, Terraform, Scrum, Agile, Teaching, Project management, B2B Customer communication, Java, SQL, Django, FastAPI, NodeJS, Svelte}
-    \skillitem{1}{Unreal engine, C++, C, Android, AWS, Kotlin, Go, Zig, Haskell, PHP, MongoDB, \LaTeX, NextJS, Bun, Deno, Angular, HTMX}
+    \skillitem{3}{
+      Rust,
+      TS/JS,
+      Python,
+      Bevy,
+      Google cloud,
+      Svelte,
+      React,
+      Docker,
+      CI/CD,
+      Shell scripts,
+      Linux,
+      Git,
+      Kanban
+    }
+    \skillitem{2}{
+      Godot,
+      Unity,
+      Blender,
+      C\#,
+      Lua,
+      Azure,
+      Terraform,
+      Scrum,
+      Agile,
+      Teaching,
+      Project management,
+      B2B Customer communication,
+      Java,
+      SQL,
+      Django,
+      FastAPI,
+      NodeJS,
+      Bun,
+      WGSL
+    }
+    \skillitem{1}{
+      Unreal engine,
+      C++,
+      C,
+      Android,
+      AWS,
+      Kotlin,
+      Go,
+      Zig,
+      Haskell,
+      PHP,
+      MongoDB,
+      \LaTeX,
+      NextJS,
+      Deno,
+      Angular,
+      HTMX
+    }
 \end{skills}
 
 What I mean by each level:
 
 \begin{etaremune}
-    \item I'm as confident in these as I can be. Experience: 3-10 (average 5) years.
-    \item What I think of as basic competence, but others keep telling me is a high bar. Experience: 1-8 (average 2) years.
-    \item A week of (re-)learning away from level 2. Average experience: 3 months.
+    \item What I'm best at. Average experience five years.
+    \item Perimeter of my comfort area. Average experience two years.
+    \item A week of (re-)learning away from level 2. Average experience three months.
 \end{etaremune}
 
 There are a lot things I dabble in that didn't make the cut. I've hit the 50
